# ib-practica11-oop-cmake-Ivan-Garcia02

Complejos/: CMakeLists.txt
Complejos/src/: complejo.cc  complejo.h  complejos  complejos.cc
Fechas/: CMakeLists.txt
Fechas/doc/html/: graph_legend.html  index.html
Fechas/src/: fecha.cc  fecha.h  fechas.cc  tools.cc  tools.h
Modificacion/: CMakeLists.txt
Modificacion/src/: fecha2.cc  fecha2.h  fechas2.cc  tools2.cc  tools2.h
Racionales/: CMakeLists.txt
Racionales/src/: racional.cc  racional.h  racionales.cc  tools.cc  tools.h
